# clawdis

./: AGENTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/clawdis/: CLAUDE.md  README.md  index.html  package.json  vite.config.ts  vitest.config.ts
apps/clawdis/docs/: ARCHITECTURE.md
apps/clawdis/extensions/raycast/: README.md  package.json  tsconfig.json
apps/clawdis/src/: App.css  App.tsx  main.tsx
apps/clawdis/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/clawdis/src-tauri/capabilities/: default.json
apps/clawdis/src-tauri/src/: lib.rs  main.rs
apps/clawdis/src/components/: ThinkingSelector.css  ThinkingSelector.tsx
docs/: agent.md  configuration.md  faq.md  skills.md
docs/gateway/: remote-gateway-readme.md  remote.md
scripts/: package-mac-app.sh  sync-workspace-to-vps.sh
src/: utils.ts
src/agents/: agent-configs.ts  clawdis-tools.ts  mcp-tools.ts  pi-embedded-runner.ts  sandbox.ts  workspace.ts
src/agents/tools/: browser-tool.ts
src/auto-reply/: reply.triggers.test.ts  status.test.ts  status.ts
src/canvas-host/a2ui/: .bundle.hash
src/cli/: browser-cli.ts  dns-cli.ts  profile.test.ts  profile.ts  program.ts
src/commands/: doctor.ts
src/config/: config.test.ts  config.ts  paths.ts  types.ts
src/cron/: isolated-agent.test.ts
src/daemon/: launchd.ts  schtasks.ts
src/discord/: monitor.ts
src/gateway/: call.ts  server.models-voicewake.test.ts  session-utils.ts  test-helpers.ts
src/infra/: dotenv.test.ts
src/infra/hooks/: runner.ts
src/infra/mcp/: client.ts  registry.ts
src/web/: logout.test.ts
(+98 files in other folders)
